<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_add_card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/status_bar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_middle"
            android:layout_marginEnd="@dimen/margin_middle"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/margin_middle"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute"
            tools:targetApi="m" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_add"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="@dimen/margin_middle"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/margin_middle"
            android:src="@drawable/add_link"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_rf_cards"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute"
            tools:targetApi="m" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_rf_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_standard"
            android:text="@string/rf_cards"
            android:textColor="@color/link_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_adding_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_standard"
        android:layout_marginStart="24dp"
        android:text="@string/adding_card"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_adding_card">


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/enter_card_info"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_standard"
            app:cardElevation="@dimen/margin_standard"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/margin_standard">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_number"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_middle"
                    android:background="@drawable/et_style"
                    android:drawableEnd="@drawable/ic_qr_code_scanner"
                    android:hint="0000 0000 0000 0000"
                    android:padding="@dimen/margin_standard"
                    android:inputType="number"
                    android:textColor="@color/link_color"
                    android:textCursorDrawable="@null" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expiry_date"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_middle"
                    android:background="@drawable/et_style"
                    android:hint="MM/YY"
                    android:padding="@dimen/margin_standard"
                    android:inputType="number"
                    android:textColor="@color/link_color"
                    android:textCursorDrawable="@null" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="@dimen/margin_standard"
        android:backgroundTint="@color/link_color"
        android:text="@string/tv_continue"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>